Non-unified build fixes, early February 2021 edition https://bugs.webkit.org/show_bug.cgi?id=221701

Unreviewed non-unified build fixes.


Source/JavaScriptCore:

* bytecode/IterationModeMetadata.h:
* bytecode/SetPrivateBrandStatus.h:

Source/WebCore:

* rendering/RenderImage.cpp:

Source/WebKit:

* NetworkProcess/PrivateClickMeasurementManager.cpp:


Canonical link: https://commits.webkit.org/233938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272690 268f45cc-cd09-0410-ab3c-d52691b4dbfc